# weak-signal-benchmark

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ablation/: README.md  __init__.py  common.py  compute_kappa.py  evaluate_budget_variants.py  evaluate_custom.py  rag_budget_runner.py  rag_budget_runner_30b.py  tongyi_budget_runner.py  tongyi_watchdog.py
benchmark_before/: application_focused.json  problem_space_2023_2024.json  solution_space_2020_2022.json  solution_space_2023_2024.json
benchmark_before/backup/: problem_space_2020_2022_backup.json  problem_space_2023_2024_backup.json  solution_space_2020_2022_backup.json  (+1 more)
configs/: dr_tulu.yaml  gemini_3_flash.yaml  gpt_4_1.yaml  qwen3_30b_rag.yaml  qwen3_8b_rag.yaml  tongyi.yaml
construction/: README.md  backfill_nlp.py  direction_prompts.py  fill_empty_references.py  run_all_domains.py  run_domain_weak_signals.py  run_topic_weak_signals.py  validate_reference_titles.py  weak_signals_by_domain.json
construction_v2/: README.md  topics.json
evaluation/: bertscore_eval.py  evaluation_guide.md  llm_set_eval.py  llm_signal_eval.py  loaders.py  run_all.py
scripts/: batch_size_experiment.py  prompt_experiment.py  run_all.py  run_all.sh  run_evaluation.py  strict_prompt_experiment.py
tools/: check_construction_outputs.py  check_prediction_outputs.py
verification/: README.md  augment_manifests.py  calibrate_rerank.py  data_acquisition.py  domain_descriptions.py  export_signal_results.py  extract_verified_signals.py  frequency_dynamics.py  sample_matched_papers.py  topic_extraction.py
(+1628 files in other folders)
