[project]
name = "weak-signal-benchmark"
version = "0.1.0"
description = "BackTrend: weak-signal benchmark for scientific and technological research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "jupyterlab (>=4.4.5,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pypdf (>=5.9.0,<6.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "openai",
    "tiktoken",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pyyaml (>=6.0,<7.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0,<9.0)",
    "pytest-cov (>=5.0,<6.0)",
]

[[tool.poetry.packages]]
include = "wsb"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
